# ai

./: .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CLAUDE.md  eslint.config.js  kiira.config.ts  knip.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.agent/self-learning/: INDEX.md
.changeset/: ag-ui-interrupts.md  angular-adapter.md  anthropic-sonnet-5-fable-5-support.md  detach-realtime-adapter-client-peer-dep.md  devtools-memory-inspector.md  fix-generation-hooks-onresult-inference.md  gemini-client-config-dts-import.md  gemini-model-meta-refresh.md  grok-imagine-video-adapter.md  interrupt-binding-ownership.md  interrupts-validation-ownership.md  markdown-plugin-customization.md  memory-middleware.md  otel-full-usage-emission.md  react-native-ai-support.md  resumable-streams.md  shared-scope.md  tender-otters-tease.md  tighten-typescript-safety.md  typed-runtime-context.md  use-chat-reset-on-action.md  vue-messages-discrimination.md
codemods/: package.json
docs/: config.json
docs/adapters/: anthropic.md  elevenlabs.md  fal.md  gemini.md  grok.md  groq.md  ollama.md  openai-compatible.md  openai.md  openrouter.md
docs/advanced/: built-in-middleware.md  debug-logging.md  extend-adapter.md  middleware.md  multimodal-content.md  otel.md  per-model-type-safety.md  runtime-adapter-switching.md  (+3 more)
examples/: README.md
examples/ag-ui/servers/rust/: Cargo.toml  README.md
examples/ag-ui/servers/rust/src/: agui.rs  main.rs  messages.rs  providers.rs
scripts/: .sync-models-last-run  openrouter.models.json  scan-dangling-dts.mjs
(+453 files in other folders)
